--- a/vignettes/nested-sampling-with-ernest.Rmd
+++ b/vignettes/nested-sampling-with-ernest.Rmd
@@ -35,144 +35,157 @@ library(LaplacesDemon)
 
 # Nested Sampling with Ernest
 
-This vignette provides a hands-on introduction to nested sampling (NS) using the `ernest` package. You will learn how to:
+This vignette provides a quick overview of nested sampling (NS) and the main functions within the ernest package. Most of this information is available scattered throughout the R documentation. After reading this, you should be able to:
 
--   Understand the role of model evidence in Bayesian inference and why it is difficult to compute.
--   Use prior transforms to define parameter spaces for NS.
--   Set up and run a nested sampling analysis in R with ernest.
--   Inspect, summarise, and visualise results from an NS run, including the evidence estimates and posterior samples.
+-   Identify the role of model evidence within Bayesian data analysis.
+-   Understand how and why NS is different from more popular Bayesian computational techniques (i.e., Markov Chain Monte Carlo [MCMC]).
+-   Identify the necessary components for a nested sampling run and how to implement them within ernest.
+-   Perform, summarise, and visualise the results from an NS run, including the model evidence estimates and posterior samples.
 
-## Bayesian Model Evidence and Nested Sampling
+## Bayes' Theory and Model Evidence
 
-In Bayesian inference, we use probabilities to represent our current beliefs about a model’s unobservable parameters [@ashton2022]. When we gather new data, we update these beliefs using Bayes' theorem: $$
-P(\theta) = \frac{L(\theta)\pi(\theta)}{Z}
-$$ where $\pi(\theta)$ is the *prior distribution*, $L(\theta)$ is the *likelihood* of a model given parameters $\theta$ and the data $D$, and $P(\theta)$ is the *posterior distribution* of the parameters after our beliefs have been updated.
+In Bayesian inference, we use probabilities to represent our beliefs about a model's unobservable parameters [@ashton2022]. These beliefs can be updated when we evaluate our model $M$ in light of some observed data $D$. Formally, these updates can be expressed using Bayes' theorem:
 
-The denominator $Z$ is called the *Bayesian evidence* or *marginal likelihood*. In isolation, $Z$ serves to normalise $P(\theta)$ so that it is a well-conditioned probability distribution. If we reorganise Bayes' theorem to isolate $Z$, we see that calculating a model's evidence involves integrating over all possible values of $\theta$: $$
+$$
+\Pr(\theta|D,M) = \frac{\Pr(D|\theta, M) \Pr(\theta|M)}{\Pr(D|M)}
+$$
+
+Each component of Bayes' theorem has a role:
+
+-   $\Pr(D|\theta,M) = L(\theta)$ is the likelihood function, describing how likely the data is given some parameter estimate,
+
+-   $\Pr(\theta|M) = \pi(\theta)$ is the prior distribution, representing our current knowledge of how a model's parameters are distributed.
+
+-   $\Pr(\theta|D,M) = \Pi(\theta)$ is the posterior distribution, which represents our knowledge of $\theta$'s distribution after it has been updated with $D$, and;
+
+-   $\Pr(D|M) = Z$ is the Bayesian evidence, which is the normalizing constant for $\Pi(\theta)$, allowing the posterior to exist as a well-conditioned probability distribution.
+
+Generally, we have access to our model's likelihood function and prior distribution. The goal of Bayesian calculation is to use these components to estimate a model's posterior distribution and its evidence. Historically, most Bayesian computations have been performed with a focus on estimating the posterior: Packages like [brms](https://cran.r-project.org/package=brms), for example, use techniques derived from MCMC to generate dense chains of samples that approximate $P(\theta)$. In this approach, estimating the evidence usually requires considerable extra work beyond estimating $P(\theta)$.
+
+Because of this extra computational diﬃculty, evidence values are often ignored by researchers or treated as optional by-products @skilling2006. This is unfortunate, because we can use $Z$ as a parameter-independent representation of the probability of generating $D$ under the model $M$. To show this, we can refactore Bayes' theorem and isolate evidence:
+
+$$
 Z = \int_{\forall \theta} L(\theta) \pi(\theta) d\theta
-$$This allows us to use $Z$ as a parameter-independent measure of a model's overall plausibility given some data. When comparing two models, the ratio of their respective evidences (called the Bayes factor) shows how much more the data support one model over the other, which forms the foundation of Bayesian model selection.
+$$ Here, we notice that evidence can also be called a model's *marginal likelihood*, calculated by integrating out the prior distribution of the parameters from the likelihood function. Calculating $Z$ allows for us to compare competing models of the same data by using the ratio of their respective evidences (called the Bayes factor). Unlike model selection with maximum likelihood estimates, such comparisons are performed independently from the parameter spaces of each model. Additionally, sharing evidence values for published models can be valuable for future researchers who may wish to build their own competing models.
 
-For most data and models, the evidence integral cannot be solved directly. Instead, researchers rely on estimation methods. Nested sampling (NS), introduced by @skilling2004 and @skilling2006, is designed to estimate $Z$ even when the posterior distribution is poorly conditioned (e.g., if $L(\theta)$ has multiple peaks or discontinuities along values of $\theta$). It accomplishes this by dividing the prior space $\pi(\theta)$ into many small nested shells or volumes. These shells are defined by the smallest likelihood value they contain, such that the volume of the cells containing the smallest value $L^*$ is given by $$
+## Nested Sampling Overview
+
+Nested sampling, introduced in @skilling2004 and @skilling2006, is designed to estimate $Z$ directly, while providing $P(\theta)$ as an optional by-product. These estimates can be generated in scenarios that typically confound MCMC-based sampler, such as when the posterior distribution is poorly conditioned (e.g., if $L(\theta)$ has multiple local maxima).
+
+The goal of NS is to approximate $Z$ by simplifying the complex, multi-dimensional integral over $\pi(\theta)$ into a unidimensional integral over a series of small regions of $\pi(\theta)$. These regions or shells are constructed based on the smallest likelihood value they each contain, such that regions with high likelihoods are nested within regions of small likelihood. For a given likelihood value $L^*$, we can define the volume of prior spacethat contains regions of higher likelihood:$$
 V(L^*) = \int_{L(\theta) > L^*} \pi(\theta) d\theta
-$$ If we build many $V(L^*)$ across different values of $L^*$, we can approximate the original multidimensional integral across the parameter space of $\theta$ with a one-dimensional integral over the sequence of $V(L^*)$: $$
+$$If we take many different values of $L^*$ across the prior and find their respective $V(L^*)$, we can calculate evidence through integrating the likelihood function over these volumes: $$
 Z = \int_0^1 V^{-1}(L^*) dV
-$$ where $V^{-1}(V(L^*)) = L^*$ exists. This requires us to estimate the volume of each shell $V$, which we can do using the properties of the uniform order statistics [@speagle2020].
+$$where $V^{-1}(V(L^*)) = L^*$ exists.
 
-NS generates this sequence of shells by generating a set number of live points within the prior space, then replacing the worst of these points with a new point from $\pi(\theta)$ with an additional likelihood constraint. This lets NS handle complicated likelihood surfaces, including those with multiple peaks or sharp transitions. In addition, NS naturally provides stopping rules, meaning the algorithm knows when it has gathered enough information to accurately estimate the evidence. As a bonus, the same samples used for evidence estimation can be repurposed to estimate the posterior distribution.
+In most cases, the likelihood surface of $M$ will make it impossible for us to calculate $V$ directly from $L^*$. Instead, we need to sample values of $L^*$ in a way that allows us to estimate how much $V$ shrinks between iterations. NS accomplishes this through *likelihood-restricted prior sampling* (LRPS): A run starts by randomly generating $N$ live points within the prior space, then at each iteration the point with the lowest likelihood is used to update the evidence estimate as $L^*$, then it is replaced with a point sampled from $\pi(\theta)$ that has greater likelihood than $L^*$. Restricted sampling allows $V$ to shrink at a predictable rate at each iteration $i$ across the run [\@speagle2020]:
+
+$$
+\begin{aligned}
+  V_0 &= 1 \\
+  V_i &= tV_{i-1} \\
+  \Pr(t_i) &= Nt_i^{N - 1} \\
+\end{aligned}
+$$
+
+where $t_i$ is the smallest value within $N$ draws from the standard uniform distribution.
+
+Compared to MCMC-based methods, NS is able to estimate model evidence and quantify its uncertainty without rerunning sampling or without launching multiple chains. NS is also more equipped to handle complicated likelihood surfaces, including those with multiple peaks or sharp transitions. In addition, NS naturally provides a stopping criterion for its runs: Sampling can halt when the remaining unexplored volume of $\pi(\theta)$ stops making significant contributions to our estimate of $Z$. Finally, after the run we can use the likelihood and volume estimates of each sampled point to estimate the posterior distribution.
 
 ## Nested Sampling with ernest
 
-Here, we use an example from the documentation for the python NS package dynesty [@speagle2020] to demonstrate how to use ernest to design, perform, and report nested sampling runs.
+The ernest package, like other nested sampling implementations, requires the user to provide the key components of nested sampling: A likelihood function, a prior space specification, and an LRPS method. To demonstrate this in action, we will use an example and data from brms.
 
-### Defining Priors
-
-Nested sampling operates by drawing samples from the prior, but for efficiency, ernest represents the prior space as points in a [0, 1)-unit hypercube. A *prior transformation* function must be specified to translate points from the hypercube into valid $\theta$.
-
-In ernest, you define priors using functions like `create_uniform_prior()` or by supplying a custom transformation to `create_prior()`. In addition to organising the prior into an object that ernest can use during NS, these functions also perform checks to help ensure your prior transformation function is size- and type-stable.
-
-#### Example: Uniform Prior
-
-In many cases, it is sufficient to define a prior with independently distributed uniform or normal distributions. Ernest provides convenience functions to build such priors with efficient prior transformation functions.
-
-The following defines a uniform prior over $[-10, 10)$ for each parameter in 3D space:
+The `epilepsy` data describes a longitudinal and randomized trial of an anti-convulsant therapy. Fifty-nine patients were sorted into treatment groups and attended four treatment sessions. Our first goal is to model the number of seizures between each session (`count`) as a function of treatment-control group (`trt`) and the (standardized) number of seizures experienced at baseline (`zBase`). In base-R, this is accomplished through the `glm` function:
 
 ```{r}
-prior <- create_uniform_prior(
-  lower = -10,
-  upper = 10,
-  names = c("x", "y", "z")
-)
+data(epilepsy)
+mod <- glm(count ~ zBase * Trt, family = poisson(), data = epilepsy)
+mod$coefficients
+```
+
+
+
+The prior encodes our current knowledge of how the parameters within our model are distributed. In ernest, the priors are encoded as `ernest_prior` objects. Users create these objects using `create_prior` or one of its specializations (e.g., `create_normal_prior`).
+
+Like other NS implementations, ernest creates and resamples points within a $d$-dimensional unit cube. These points are then transformed to the original parameter space before likelihood values are calculated. In ernest, this *prior transformation function* is provided by the user, and must be able to take a point from the i.i.d. $d$-unit cube and transform it to a $d$-dimensional point within $\pi(\theta)$. For independent parameters, this transformation is identical to the inverse cumulative distribution function (CDF) associated with each parameter; for many distributions within R, this is called the quantile function (e.g., `qnorm`).
+
+`create_prior` allows users to provide their own prior transformation function, along with unique names for each parameter. To demonstrate this, let us assign a $N(0, 10)$ prior to each of the four coefficients within the proposed regression model. In brms, we accomplish this through `r set_prior("normal(0, 10)", class = "b", coef = "x1")`. In ernest, we first construct the transformation function, then wrap and test it with `create_prior`.
+
+```{r}
+# Transform each [0,1] value within `x` into the inverse cdf. of N(0, 10)
+inverse_t <- function(x) {
+  stats::qnorm(x, mean = 0, sd = 10)
+}
+
+prior <- create_prior(inverse_t, names = names(mod$coefficients))
 prior
 ```
-
-#### Example: Custom/Conditional Prior
-
-For more complex priors, you must provide a custom function. In the case of prior spaces with independent marginals, this amounts to specifying a function that applies the inverse CDF for each component of $\theta$.
-
-Consider the following prior space with five dimensions: The first two are drawn from a bivariate Normal distribution, the third is drawn from a Beta distribution, the fourth from a Gamma distribution, and the fifth from a truncated normal distribution.
+Alternatively, for simpler priors, we can use the convinience functions `create_normal_prior` or `create_uniform_prior`. We can also combine these priors into a single object using `c`:
 
 ```{r}
-five_dim <- function(u) {
-  x <- double(5)
-  # MVN(mu = c(5, 2), Sigma = [5, 4; 4, 5])
-  t <- qnorm(u[1:2])
-  sigma_sqrt <- matrix(c(2, 1, 1, 2), nrow = 2, byrow = TRUE)
-  mu <- c(5, 2)
-  x[1:2] <- drop(t %*% sigma_sqrt) + c(5, 2)
-  
-  # Beta
-  x[3] <- qbeta(u[3], shape1 = 2.31, shape2 = 0.627)
-  
-  # Gamma
-  x[4] <- qgamma(u[4], shape = 5)
-  
-  # Truncated Normal
-  x[5] <- qtruncnorm(u[5], a = 2, b = 10, mean = 5, sd = 2)
-  
-  return(x)
-}
-create_prior(
-  fn = five_dim,
-  names = c("MVN", "MVN", "Beta", "Gamma", "Norm[2, 10]")
+pooled_prior <- create_normal_prior(
+  names = names(mod$coefficients),
+  mean = 0,
+  sd = 10
 )
-```
 
-For more sophisticated priors (such as those for hierarchical models), you will need to build more involved prior transformation functions.
-
-```{r}
-hierarchical <- function(u) {
-  # mu ~ N(5, 1)
-  mu <- qnorm(u[1], mean = 5, sd = 1)
-  # log10(sd) ~ U[-1, 1]
-  sd <- 10 ^ qunif(u[2], -1, 1)
-  # x ~ N(mu, sd^2)
-  x <- qnorm(u[3], mean = mu, sd = sd)
-  c(mu, sd, x)
-}
-create_prior(
-  fn = hierarchical,
-  names = c("mu", "sigma", "x"),
-  lower = c(-Inf, 0, -Inf)
-)
+# Concatenating a N(0, 1) and U[0, 1] prior
+unif_p <- create_uniform_prior(names = c("A", "B"))
+norm_p <- create_uniform_prior(names = c("C", "D"))
+c(unif_p, norm_p)
 ```
 
 ### Likelihood Function
+The log-likelihood function should be capable of taking in a (post-transformation) vector of model parameters and returning the corresponding log-likelihood value. If there are regions within $\pi(\theta)$ that contain impossible parameter values, ernest expects that the log-likelihood function will return `-Inf`.
 
-Model log-likelihoods are represented in ernest with functions. These functions are expected to return a single scalar value for each possible $\theta$ within the prior space. If, for any reason, $\pi(\theta)$ contains regions where $\theta$ is invalid, ensure your likelihood function returns `-Inf`.
-
-In this example, we use `create_likelihood()` to assign parameters to the `LaplaceDemon` density function for a multivariate normal distribution:
+Unlike higher-level R packages for Bayesian inference, ernest does not provide ways to build likelihood functions for specific kinds of models. Users should consult other packages, such as [enrichwith](https://cran.r-project.org/web/packages/enrichwith/) and [tfprobability](https://cran.r-project.org/web/packages/tfprobability/index.html), which are well-equipped to assist users in building their likelihood function. In the case of the `insulin` model, we can quickly build the model's likelihood function using the components from `mod`:
 
 ```{r}
-mu <- c(0, 0, 0)
-C <- diag(1, 3)
-C[C == 0] <- 0.95
+new_x <- model.matrix(
+  object = mod$formula,
+  data = mod$model,
+  terms = mod$terms,
+  contrasts.arg = attr(model.matrix(mod), "contrasts")
+)
+new_y <- model.response(mod$model)
+linkinv <- stats::poisson()$linkinv
 
-loglike <- create_likelihood(
-  \(x) dmvn(x, mu = mu, Sigma = C, log = TRUE)
+poisson_glm_ll <- function(x) {
+  eta <- new_x %*% x
+  mu <- linkinv(eta)
+  sum(stats::dpois(new_y, lambda = mu, log = TRUE))
+}
+
+#' Custom function returns the expected log-lik. at the MLE.
+all.equal(
+  as.double(stats::logLik(mod)),
+  poisson_glm_ll(mod$coefficients),
+  check.attributes = FALSE
 )
 ```
 
+The function `create_likelihood` is used to wrap the user's log-likelihood function with several assertions on its output value. It also controls how non-finite likelihood values are encoded if they are provided; by default, these values are replaced with `-Inf` and the user is warned.
+
+### LRPS SECTION?
+
 ### Setting Up and Running the Sampler
 
-Initialise the sampler with your likelihood and prior. The number of live points (`n_points`) controls the resolution of the sampling, with more points leading to more accurate estimates in exchange for longer run times.
+We can now design a nested sampling run. First, we construct an `ernest_sampler` object: This object is bound to an environment that contains the current set of "live" points and their corresponding likelihood values.
 
 ```{r}
 sampler <- ernest_sampler(
-  log_lik = loglike,
-  prior = prior,
-  n_points = 500
+  log_lik = poisson_glm_ll,
+  prior = pooled_prior,
+  n_points = 300
 )
 sampler
 ```
 
-Run nested sampling for a fixed number of iterations or until the evidence estimate converges:
+Nested samples are generated with `generate`. The `min_logz` argument sets the minimum log-ratio between the current (estimated) evidence and the remaining (estimated) evidence in the unexplored prior. Sampling ends once this ratio falls below `min_logz`, at which point its deemed that the remaining unexplored region of $\pi(\theta)$ contains a trivially small fraction of $Z$.
 
 ```{r}
-run <- generate(
-  sampler, 
-  max_iterations = 2000,
-  show_progress = FALSE
-)
+run <- generate(sampler, min_logz = 0.1)
 run
 ```
 
@@ -201,52 +214,35 @@ summary(run2)
 summary(run2)$run
 ```
 
-The `posterior` package offers methods for inspecting the points generated during a run:
+The [posterior](https://CRAN.R-project.org/package=posterior) package offers methods for inspecting the points generated during a run. Calling `as_draws` on an `ernest_run` object produces a matrix with posterior log-weights calculated for each point. This matrix be resampled to produce a weighed posterior estimate.
 
 ```{r}
 library(posterior)
 unweighted_post <- as_draws(run2)
-```
-
-You can view the importance weight of each point and re-weight the sample to estimate the posterior distribution:
-
-```{r}
-weights(unweighted_post) |> head()
 weighted_post <- unweighted_post |>
   resample_draws()
-posterior::summarise_draws(weighted_post)
+posterior::summarise_draws(weighted_post, default_summary_measures())
 ```
 
-### Visualising Results
-
-Ernest provides plotting utilities for evidence estimates and the posterior distribution.
-
-#### Evidence evolution
+To visualize how the points evolved throughout the run, we use the `visualize` function.
 
 ```{r}
-plot(run2)
+# plot(run2)
 ```
-
-#### Posterior marginals
 
 ```{r}
 visualize(run2, type = "density")
 ```
 
-#### Trace plots
-
 ```{r}
-visualize(run2, type = "trace", vars = c("x", "y", "z"))
+visualize(run2, type = "trace", vars = c("zBase", "Trt1", "zBase:Trt1"))
 ```
 
-### Uncertainty and Resampling
-
-You can simulate the uncertainty of an NS run by generating random draws of the log-volume estimate at each iteration [@skilling2006, @higson2019]. You can then visualise this uncertainty with the estimate's `plot` method.
+Finally, we can simulate the uncertainty of an NS run by generating random draws of the log-volume estimate at each iteration [@skilling2006, @higson2019]. This is done using `calculate`.
 
 ```{r}
 calc_sim <- calculate(run2, ndraws = 500)
 calc_sim
-plot(calc_sim)
 ```
 
 ------------------------------------------------------------------------
